# TIPE

./: .gitignore  CMakeLists.txt  getCorpus.sh  getData.sh  getbigcorpus.sh
src/: CorpusReader.cpp  CorpusReader.h  Distances.cpp  Distances.h  DummyModel.cpp  DummyModel.h  ExampleMaker.cpp  ExampleMaker.h  FirstModel.cpp  FirstModel.h  KMeans.cpp  KMeans.h  LineCorpusReader.cpp  LineCorpusReader.h  Model.h  RandomText8CorpusReader.cpp  RandomText8CorpusReader.h  SecondModel.cpp  SecondModel.h  SelectiveExampleMaker.cpp  SelectiveExampleMaker.h  Serializer.cpp  Serializer.h  Text8CorpusReader.cpp  Text8CorpusReader.h  Trainer.cpp  Trainer.h  Utils.cpp  Utils.h  VocabManager.cpp  VocabManager.h  main.cpp
